--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -121,6 +121,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: ./.github/actions/prepare_buildozer
         with:
-          version: '7.3.1'
+          # Keep in sync with README.md
+          version: '8.2.1'
       - name: Integration tests - Applying fixes
         run: python test/apply_fixes/execute_tests.py
