feat(aspect): Most times set `__cplusplus` for the C++ impl
- Always set `__cplusplus` in the new implementation, unless a user
  provided `__cplusplus` is detected or we cannot deduce its value.
- Drop logic to infer `__cplusplus` based on file names.
- If our logic based on `-std=..` does not suffice and `__cplusplus` is
  required to preprocess the code, users are expected to set
  `__cplusplus` themselves.
- Support more possible clang CLI styles.
- Support more possible MSVC values for `\std:`

--- a/examples/set_cpp_standard/BUILD
+++ b/examples/set_cpp_standard/BUILD
@@ -1,13 +1,7 @@
 load("@rules_cc//cc:cc_library.bzl", "cc_library")
 
 cc_library(
-    name = "cpp_lib",
-    srcs = ["cpp_lib.cpp"],
-    hdrs = ["cpp_lib.h"],
-)
-
-cc_library(
     name = "use_specific_cpp_standard",
-    hdrs = ["use_specific_cpp_standard.h"],
+    srcs = ["use_specific_cpp_standard.cpp"],
     copts = ["-std=c++17"],
 )
