--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -66,3 +66,9 @@ repos:
     hooks:
     -   id: clang-format
         types_or: [c++, c]
+
+  - repo: https://github.com/renovatebot/pre-commit-hooks
+    rev: 42.71.0
+    hooks:
+      - id: renovate-config-validator
+        args: [--strict]
