chore: Limit Renovate to releases which are at least 14 days old
Although, supply chain attacks are not a typical problem with Bazel
dependencies, we have no need for the latest greatest deps and thus can
easily implement this precaution just in case.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -25,5 +25,7 @@
     "xz",
     "zlib",
     "zstd"
-  ]
+  ],
+  "minimumReleaseAge": "14 days",
+  "minimumReleaseAgeBehaviour": "timestamp-optional"
 }
