--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ venv/
 # Test data
 dwyu/aspect/private/analyze_includes/test/benchmark/parsing_examples
 test/benchmark/generated
+
+# Code coverage artifacts
+coverage_data
