--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,9 +10,7 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v7
       - uses: actions/setup-python@v6
-        with:
-          python-version: "3.13"
-      - uses: pre-commit/action@v3.0.1
+      - uses: j178/prek-action@v1
 
   fast-tests:
     runs-on: ubuntu-24.04
