build: Use precompiled protoc

--- a/.bazelrc
+++ b/.bazelrc
@@ -10,6 +10,10 @@ test --test_output=errors
 build --features=external_include_paths
 build --host_features=external_include_paths
 
+# protoc is a dependency of the docs generation. We use the precompiled version to save build time
+common --incompatible_enable_proto_toolchain_resolution
+common --@protobuf//bazel/toolchains:prefer_prebuilt_protoc
+
 # https://clang.llvm.org/docs/DiagnosticsReference.html
 # Most common warnings
 build --cxxopt=-Wall
@@ -34,10 +38,8 @@ build --cxxopt=-Werror
 # Ignore compiler warnings in external code outside our control
 build --per_file_copt=boost.wave/src/.*@-w
 build --per_file_copt=googletest/src/.*@-w
-build --per_file_copt=src/google/protobuf/.*@-w
 build --host_per_file_copt=boost.wave/src/.*@-w
 build --host_per_file_copt=googletest/src/.*@-w
-build --host_per_file_copt=src/google/protobuf/.*@-w
 
 build:clang_tidy --aspects=//tools/clang_tidy:aspect.bzl%clang_tidy
 build:clang_tidy --output_groups=clang_tidy
