--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -36,8 +36,8 @@ python.toolchain(python_version = "3.8")
 
 bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
 
-# Too old protobuf causes build failures with abseil
-bazel_dep(name = "protobuf", version = "33.2", dev_dependency = True)
+# protobuf is a transitive dependencies of our docs generation. We desire a version providing precompiled protoc.
+bazel_dep(name = "protobuf", version = "33.4", dev_dependency = True)
 bazel_dep(name = "toolchains_llvm", version = "1.6.0", dev_dependency = True)
 
 llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
