ci: Unify unit tests and docs consistency tests
We splitted them before for performance reasons. Now that we have a
precompiled protoc available this is no longer required.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,8 +17,8 @@ jobs:
     needs: [ pre-commit ]
     steps:
       - uses: actions/checkout@v6
-      - name: DWYU Unit tests
-        run: bazel test -- //... -//docs/...
+      - name: Run unit tests
+        run: bazel test //...
       - name: Execute sanitizers
         run: bazel test --config=sanitize //dwyu/...
       - name: Execute DWYU
@@ -27,14 +27,6 @@ jobs:
         run: bazel build --config=clang_tidy //dwyu/...
       - name: Ensure C++11 compatibility
         run: ./scripts/ensure_cpp11_compatibility.sh
-
-  check-documentation:
-    runs-on: ubuntu-24.04
-    needs: [ pre-commit ]
-    steps:
-      - uses: actions/checkout@v6
-      - name: Check documentation consistency
-        run: bazel test //docs/...
 
   sub-workspaces-tests:
     runs-on: ubuntu-24.04
