--- a/test/aspect/BUILD
+++ b/test/aspect/BUILD
@@ -1,26 +1,23 @@
-load("@rules_python//python:py_library.bzl", "py_library")
 load("@rules_python//python:py_test.bzl", "py_test")
-
-py_library(
-    name = "expected_result",
-    testonly = True,
-    srcs = ["expected_result.py"],
-    deps = ["@depend_on_what_you_use//test/support"],
-)
 
 py_test(
     name = "expected_result_test",
-    srcs = ["expected_result_test.py"],
-    deps = [":expected_result"],
+    srcs = [
+        "expected_result.py",
+        "expected_result_test.py",
+    ],
+    deps = ["@depend_on_what_you_use//test/support"],
 )
 
 py_test(
     name = "test_case_test",
     srcs = [
+        "expected_result.py",
         "test_case.py",
         "test_case_test.py",
+        "version.py",
     ],
-    deps = [":expected_result"],
+    deps = ["@depend_on_what_you_use//test/support"],
 )
 
 py_test(
