fix(aspect): Fix action clashes for files with the same basename
Fixes https://github.com/martis42/depend_on_what_you_use/issues/482

--- a/test/aspect/MODULE.bazel
+++ b/test/aspect/MODULE.bazel
@@ -51,6 +51,12 @@ local_path_override(
     path = "external_repo/repo",
 )
 
+bazel_dep(name = "files_with_same_name_test_repo")
+local_path_override(
+    module_name = "files_with_same_name_test_repo",
+    path = "files_with_same_name/ext_repo",
+)
+
 bazel_dep(name = "complex_includes_test_repo")
 local_path_override(
     module_name = "complex_includes_test_repo",
