--- a/docs/BUILD
+++ b/docs/BUILD
@@ -1,13 +1,15 @@
-load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")
+load(":stardoc_with_diff_test.bzl", "stardoc", "update_and_test_docs")
 
-stardoc_with_diff_test(
+stardoc(
     name = "cc_info_mapping",
     bzl_library_target = "//dwyu/cc_info_mapping:cc_info_mapping",
+    out_file = "cc_info_mapping.md",
 )
 
-stardoc_with_diff_test(
+stardoc(
     name = "dwyu_aspect",
     bzl_library_target = "//dwyu/aspect:factory",
+    out_file = "dwyu_aspect.md",
 )
 
-update_docs()
+update_and_test_docs()
