refactor: Restructure bzl_library targets
- Each `bzl_library` has a single src file whenever sensible
- Each `bzl_library` target name ends with `_bzl`

--- a/docs/BUILD
+++ b/docs/BUILD
@@ -2,13 +2,13 @@ load(":stardoc_with_diff_test.bzl", "stardoc", "update_and_test_docs")
 
 stardoc(
     name = "cc_info_mapping",
-    bzl_library_target = "//dwyu/cc_info_mapping:cc_info_mapping",
+    bzl_target = "//dwyu/cc_info_mapping:cc_info_mapping_bzl",
     out_file = "cc_info_mapping.md",
 )
 
 stardoc(
     name = "dwyu_aspect",
-    bzl_library_target = "//dwyu/aspect:factory",
+    bzl_target = "//dwyu/aspect:factory_bzl",
     out_file = "dwyu_aspect.md",
 )
 
