--- a/dwyu/cc_toolchain_headers/BUILD
+++ b/dwyu/cc_toolchain_headers/BUILD
@@ -1,13 +1,17 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 
 bzl_library(
-    name = "cc_toolchain_headers",
-    srcs = [
-        "cc_toolchain_headers.bzl",
-        "providers.bzl",
-    ],
+    name = "cc_toolchain_headers_bzl",
+    srcs = ["cc_toolchain_headers.bzl"],
     visibility = ["//visibility:public"],
     deps = [
+        ":providers_bzl",
         "//dwyu/cc_toolchain_headers/private:gather_cc_toolchain_headers_bzl",
     ],
+)
+
+bzl_library(
+    name = "providers_bzl",
+    srcs = ["providers.bzl"],
+    visibility = ["//visibility:public"],
 )
