--- a/dwyu/private/BUILD
+++ b/dwyu/private/BUILD
@@ -3,9 +3,7 @@ load("@rules_cc//cc:cc_library.bzl", "cc_library")
 
 bzl_library(
     name = "utils_bzl",
-    srcs = [
-        "utils.bzl",
-    ],
+    srcs = ["utils.bzl"],
     visibility = ["//dwyu:__subpackages__"],
 )
 
