--- a/dwyu/aspect/BUILD
+++ b/dwyu/aspect/BUILD
@@ -1,16 +1,27 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 
 bzl_library(
-    name = "factory",
-    srcs = [
-        "dwyu.bzl",
-        "factory.bzl",
-    ],
+    name = "dwyu_bzl",
+    srcs = ["dwyu.bzl"],
     visibility = ["//visibility:public"],
     deps = [
-        "//dwyu/cc_info_mapping",
-        "//dwyu/cc_toolchain_headers",
+        "//dwyu/cc_info_mapping:providers_bzl",
+        "//dwyu/cc_toolchain_headers:providers_bzl",
+        "//dwyu/private:utils_bzl",
         "@rules_cc//cc:action_names_bzl",
+        "@rules_cc//cc:find_cc_toolchain_bzl",
+        "@rules_cc//cc/common",
+    ],
+)
+
+bzl_library(
+    name = "factory_bzl",
+    srcs = ["factory.bzl"],
+    visibility = ["//visibility:public"],
+    deps = [
+        ":dwyu_bzl",
+        "//dwyu/cc_info_mapping:providers_bzl",
+        "//dwyu/cc_toolchain_headers:providers_bzl",
         "@rules_cc//cc:find_cc_toolchain_bzl",
         "@rules_cc//cc/common",
     ],
