--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,7 +78,7 @@ jobs:
         if: runner.os == 'Windows'
         run: python test/aspect/execute_tests.py --only-default-version --no_output_base
 
-  integration-tests-aspect-cpp-impl:
+  integration-tests-aspect-legacy-impl:
     strategy:
       matrix:
         os: [ ubuntu-24.04, macos-15, windows-2022 ]
@@ -87,8 +87,8 @@ jobs:
     needs: [ fast-tests, integration-tests-examples ]
     steps:
       - uses: actions/checkout@v6
-      - name: Integration tests - Aspect with C++ implementation
-        run: python test/aspect/execute_tests.py --no_output_base --only-default-version --cpp_impl_based
+      - name: Integration tests - Aspect with legacy Python implementation
+        run: python test/aspect/execute_tests.py --no_output_base --only-default-version --py_impl_based
 
   integration-tests-apply-fixes:
     strategy:
