refactor: Optimize apply_fixes integration tests
Initially, we created a temporary throw away workspace with dedicated
output base for all apply_fixes integration tests to ensure the automatic
fixes are not messing with the main repo. However, this approach comes with
a large price regarding performance. Setting up all those Bazel workspaces
to test some trivial operations takes a lot of time.
With the upcoming change to make the C++ implementation the default
DWYU version, this is no longer tolerable, as DWYU would be compiled anew
from scratch for each test case.

Our new design is close to the aspect integration tests, where we run
all tests from a common workspace. While this creates changes in the main
repo, a git checkout in the example workspace makes it easy enough to
clean this side effect up without consequences for other parts of the
repo.

While doing this we discovered the code in the examples was not always
correct. We fix this, so the examples are compiling.

--- a/.bazelignore
+++ b/.bazelignore
@@ -7,10 +7,7 @@ examples/skipping_targets
 examples/support
 examples/target_mapping
 
-test/apply_fixes/missing_dependency
-test/apply_fixes/needlessly_public_dependency
-test/apply_fixes/tool_cli
-test/apply_fixes/unused_dependency
+test/apply_fixes
 
 test/aspect
 test/aspect/alias
