--- a/test/apply_fixes/missing_dependency/workspace/libs/BUILD
+++ b/test/apply_fixes/missing_dependency/workspace/libs/BUILD
@@ -4,7 +4,7 @@ cc_library(
     name = "foo",
     hdrs = ["foo.h"],
     visibility = ["//visibility:public"],
-    deps = ["//other_lib"],
+    deps = ["//missing_dependency/workspace/other_lib"],
 )
 
 cc_library(
